@@ -1,4 +1,8 @@
 
+2022-12-08  Ron Norman <rjn@inglenet.com>
+
+	* call.c: For AIX, use RTLD_MEMBER to dlopen shared code from archive
+
 2022-11-26  Ron Norman <rjn@inglenet.com>
 
 	* fileio.c,fisam.c: Add code to handle ISAM index compression settings
